@@ -1,6 +1,8 @@
 New in 0.9.3:
 * mkdir: make directory on server (not really new, but I forgot to mention it)
 * site: send site specific commands
+* removed option emacs-status
+* fixed bug with status lines on small terminals (less than 25 columns)
 
 New in 0.9.2:
 * reload: reload correct directory
